# leadsheet

./: .gitignore  ARCHITECTURE.md  README.md  REFACTORING_SUMMARY.md  example.tex  justfile  leadsheet-chords.sty  leadsheet-core.sty  leadsheet-sections.sty  leadsheet.cls  pyproject.toml
.github/workflows/: ci.yml
examples/: No Escape.tex  maniac.tex
latex/: leadsheet-chords.sty
leadsheet/: __init__.py  __main__.py  compiler.py  converter.py
leadsheet/latex/: leadsheet-core.sty  leadsheet-sections.sty  leadsheet.cls
tests/: conftest.py  test_compiler.py
