[project]
name = "leadsheet"
version = "0.1.0"
description = "Python wrapper for compiling LaTeX leadsheet documents to PDF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.0",
]

[dependency-groups]
dev = [
    "pypdf>=5.0.0",
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Include the latex/ directory at repo root as package data inside leadsheet/latex/
[tool.hatch.build.targets.wheel.force-include]
"latex" = "leadsheet/latex"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--capture=no"]

[tool.ruff]
preview = true
line-length = 180

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "basic"
