[project]
name = "leadsheet"
version = "0.1.0"
description = "Python wrapper for compiling LaTeX leadsheet documents to PDF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.27.1",
]

[dependency-groups]
dev = [
    "pypdf>=6.8.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--capture=no"]

[tool.ruff]
preview = true
line-length = 180

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "basic"
